Estilizando a página checkout

--- a/foodJP/FoodJP/Checkout.html
+++ b/foodJP/FoodJP/Checkout.html
@@ -11,19 +11,53 @@
 
 <body>
     <main>
-        <nav class="navBar">
-            <div class="title">
-                <h1>FoodJP</h1>
-                <div class="navBar-menu">
-                    <button class="menu-button" onclick="toggleMenu()">☰</button>
-                    <div class="menu" id="menu">
-                        <a href="#">Home</a>
-                        <a href="#">sobre</a>
-                        <a href="#">Contato</a>
+        <header>
+            <nav class="navBar">
+                <div class="title">
+                    <h1>FoodJP</h1>
+                    <div class="navBar-menu">
+                        <button class="menu-button" onclick="toggleMenu()">☰</button>
+                        <div class="menu" id="menu">
+                            <a href="#">Home</a>
+                            <a href="#">sobre</a>
+                            <a href="#">Contato</a>
+                        </div>
                     </div>
                 </div>
+            </nav>
+        </header>
+
+        <div class="titulo">
+            <h3 id="titulo">Realize seu pedido</h3>
+        </div>
+
+        <div id="info">
+            <div class="info-imagem">
+                <img src="./img/img.cardapio/bolinho-de-frango-chines.webp" alt="Imagem de comida" class="imagem-comida">
+                <div id="info-text">
+                    <h3 class="info-nome">Bolinho De Frango</h3>
+                    <p class="info-descricao">Uma explosão de sabor em cada mordida! Nossos bolinhos de frango são feitos com massa crocante e dourada, recheados com frango moído temperado à moda oriental – combinando gengibre fresco, alho, cebolinha, molho shoyu e um toque de óleo de gergelim.</p>
+                    <button class="info-preco">R$ 20,00</button>
+                </div>
             </div>
-        </nav>
+        </div>
+
+        <div class="container">
+            <div class="container-form">
+                <form id="formulario" action="">
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome" name="nome" required placeholder="Digite seu nome completo">
+
+                    <label for="endereco">Endereço</label>
+                    <input type="text" id="endereco" name="endereco" required placeholder="Digite seu endereço completo">
+
+                    <label for="telefone">Telefone</label>
+                    <input type="tel" id="telefone" name="telefone" required placeholder="Digite seu telefone" pattern="[0-9]{2}-[0-9]{5}-[0-9]{4}" title="Formato: 00-00000-0000">
+                </form>
+                <div class="container-button">
+                    <button type="submit" id="botao" onclick="validarFormulario()">Finalizar pedido</button>
+            </div>
+        </div>
     </main>
 </body>
 
