--- a/foodJP/FoodJP/index.html
+++ b/foodJP/FoodJP/index.html
@@ -108,12 +108,12 @@
             </ol>
             <ol>
               <li><strong>Contato</strong></li>
-              <li>+5583999887280</li>
+              <li>Ligar para o contato</li>
               <li><a href="mailto:joseclebson546@gmail.coms">joseclebson546@icloud.com</a></li>
             </ol>
           </ul>
           <div class="desenvolvedor">
-            <p><a href="https://www.instagram.com/clebs0n_/?next=%2F">Desenvolvido por Clebson</a></p>
+            <p><a href="https://www.instagram.com/clebs0n_/?next=%2F">Dev Clebson</a></p>
           </div>
         </div>
       </div>
